--- a/index.html
+++ b/index.html
@@ -173,22 +173,22 @@
             <h2 class="title">링크 공유하기</h2>
             
             <div class="button-group">
-                <button class="copy-button" onclick="copyToClipboard('카카오톡 친구추가, 유튜브 구독, 인스타그램 팔로우, 틱톡 팔로우 완료')">
+                <button class="copy-button" onclick="copyToClipboard('스톤킴 - 카카오톡 친구추가, 유튜브 구독, 인스타그램 팔로우, 틱톡 팔로우 완료')">
                     <span>모두 완료</span>
                     <span class="copy-icon">복사</span>
                 </button>
 
-                <button class="copy-button" onclick="copyToClipboard('카카오톡 친구추가, 유튜브 구독 완료')">
+                <button class="copy-button" onclick="copyToClipboard('스톤킴 - 카카오톡 친구추가, 유튜브 구독 완료')">
                     <span>카카오톡 + 유튜브</span>
                     <span class="copy-icon">복사</span>
                 </button>
 
-                <button class="copy-button" onclick="copyToClipboard('카카오톡 친구추가, 인스타그램 팔로우 완료')">
+                <button class="copy-button" onclick="copyToClipboard('스톤킴 - 카카오톡 친구추가, 인스타그램 팔로우 완료')">
                     <span>카카오톡 + 인스타그램</span>
                     <span class="copy-icon">복사</span>
                 </button>
 
-                <button class="copy-button" onclick="copyToClipboard('카카오톡 친구추가, 틱톡 팔로우 완료')">
+                <button class="copy-button" onclick="copyToClipboard('스톤킴 - 카카오톡 친구추가, 틱톡 팔로우 완료')">
                     <span>카카오톡 + 틱톡</span>
                     <span class="copy-icon">복사</span>
                 </button>
